clang/test/BSC/Negative/Parser/detect_eof/detect_eof_id.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

int a = (b // expected-error {{use of undeclared identifier 'b'}}
// expected-error@-1 {{expected ';' after top level declarator}}